_sass/minimal-mistakes/_archive.scss
/* ==========================================================================
   ARCHIVE
   ========================================================================== */

.archive {
  margin-top: 1em;
  margin-bottom: 2em;

  @include breakpoint($large) {
    float: right;
    width: calc(100% - #{$right-sidebar-width-narrow});
    padding-right: $right-sidebar-width-narrow;
  }

  @include breakpoint($x-large) {
    width: calc(100% - #{$right-sidebar-width});
    padding-right: $right-sidebar-width;
  }
}

.archive__item {
  position: relative;

  a {
    position: relative;
    z-index: 10;
  }

  a[rel="permalink"] {
    position: static;
  }
}

.archive__subtitle {
  margin: 1.414em 0 0.5em;
  padding-bottom: 0.5em;
  font-size: $type-size-5;
  color: $muted-text-color;
  border-bottom: 1px solid $border-color;

  + .list__item .archive__item-title {
    margin-top: 0.5em;
  }
}

.archive__item-title {
  margin-bottom: 0.25em;
  font-family: $sans-serif-narrow;
  line-height: initial;
  overflow: hidden;
  text-overflow: ellipsis;

  a[rel="permalink"]::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
  }

  a + a {
    opacity: 0.5;
  }
}

/* remove border*/
.page__content {
  .archive__item-title {
    margin-top: 1em;
    border-bottom: none;
  }
}

.archive__item-excerpt {
  margin-top: 0;
  font-size: $type-size-6;

  & + p {
    text-indent: 0;
  }

  a {
    position: relative;
  }
}

.archive__item-teaser {
  position: relative;
  border-radius: $border-radius;
  overflow: hidden;

  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

.archive__item-caption {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 0 auto;
  padding: 2px 5px;
  color: #fff;
  font-family: $caption-font-family;
  font-size: $type-size-8;
  background: #000;
  text-align: right;
  z-index: 5;
  opacity: 0.5;
  border-radius: $border-radius 0 0 0;

  @include breakpoint($large) {
    padding: 5px 10px;
  }

  a {
    color: #fff;
    text-decoration: none;
  }
}

/*
   List view
   ========================================================================== */

.list__item {
  .page__meta {
    margin: 0 0 4px;
    font-size: 0.6em;
  }
}

/*
   Grid view
   ========================================================================== */

.archive {
  .grid__wrapper {
    /* extend grid elements to the right */

    @include breakpoint($large) {
      margin-right: -1 * $right-sidebar-width-narrow;
    }

    @include breakpoint($x-large) {
      margin-right: -1 * $right-sidebar-width;
    }
  }
}

.grid__item {
  margin-bottom: 2em;

  @include breakpoint($small) {
    float: left;
    width: span(5 of 10);

    &:nth-child(2n + 1) {
      clear: both;
      margin-left: 0;
    }

    &:nth-child(2n + 2) {
      clear: none;
      margin-left: gutter(of 10);
    }
  }

  @include breakpoint($medium) {
    margin-left: 0; /* override margin*/
    margin-right: 0; /* override margin*/
    width: span(3 of 12);

    &:nth-child(2n + 1) {
      clear: none;
    }

    &:nth-child(4n + 1) {
      clear: both;
    }

    &:nth-child(4n + 2) {
      clear: none;
      margin-left: gutter(1 of 12);
    }

    &:nth-child(4n + 3) {
      clear: none;
      margin-left: gutter(1 of 12);
    }

    &:nth-child(4n + 4) {
      clear: none;
      margin-left: gutter(1 of 12);
    }
  }

  .page__meta {
    margin: 0 0 4px;
    font-size: 0.6em;
  }

  .page__meta-sep {
    display: block;

    &::before {
      display: none;
    }
  }

  .archive__item-title {
    margin-top: 0.5em;
    font-size: $type-size-5;
  }

  .archive__item-excerpt {
    display: none;

    @include breakpoint($medium) {
      display: block;
      font-size: $type-size-6;
    }
  }

  .archive__item-teaser {
    @include breakpoint($small) {
     /* max-height: 200px; */
    }

    @include breakpoint($medium) {
     /* max-height: 120px; */
    }
  }
}

/*
   Features
   ========================================================================== */

.feature__wrapper {
  @include clearfix();
  margin-bottom: 2em;
  border-bottom: 1px solid $border-color;

  .archive__item-title {
    margin-bottom: 0;
  }
}

.feature__item {
  position: relative;
  margin-bottom: 2em;
  font-size: 1.125em;

  @include breakpoint($small) {
    float: left;
    margin-bottom: 0;
    width: span(6 of 12);

    &:nth-child(3n + 1) {
      clear: both;
      margin-left: 0;
    }

    &:nth-child(3n + 2) {
      clear: none;
      margin-left: gutter(of 12);
    }

    &:nth-child(3n + 3) {
      clear: none;
      margin-left: gutter(of 12);
    }

    .feature__item-teaser {
      max-height: 200px;
      overflow: hidden;
    }
  }

  .archive__item-body {
    padding-left: gutter(1 of 12);
    padding-right: gutter(1 of 12);
  }

  a.btn::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
  }

  &--left {
    position: relative;
    float: left;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
    clear: both;
    font-size: 1.125em;

    .archive__item {
      float: left;
    }

    .archive__item-teaser {
      margin-bottom: 2em;
    }

    a.btn::before {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
    }

    @include breakpoint($small) {
      .archive__item-teaser {
        float: left;
        width: span(5 of 12);
      }

      .archive__item-body {
        float: right;
        padding-left: gutter(0.5 of 12);
        padding-right: gutter(1 of 12);
        width: span(7 of 12);
      }
    }
  }

  &--right {
    position: relative;
    float: left;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
    clear: both;
    font-size: 1.125em;

    .archive__item {
      float: left;
    }

    .archive__item-teaser {
      margin-bottom: 2em;
    }

    a.btn::before {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
    }

    @include breakpoint($small) {
      text-align: right;

      .archive__item-teaser {
        float: right;
        width: span(5 of 12);
      }

      .archive__item-body {
        float: left;
        width: span(7 of 12);
        padding-left: gutter(0.5 of 12);
        padding-right: gutter(1 of 12);
      }
    }
  }

  &--center {
    position: relative;
    float: left;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
    clear: both;
    font-size: 1.125em;

    .archive__item {
      float: left;
      width: 100%;
    }

    .archive__item-teaser {
      margin-bottom: 2em;
    }

    a.btn::before {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
    }

    @include breakpoint($small) {
      text-align: center;

      .archive__item-teaser {
        margin: 0 auto;
        width: span(5 of 12);
      }

      .archive__item-body {
        margin: 0 auto;
        width: span(7 of 12);
      }
    }
  }
}

/* Place inside an archive layout */

.archive {
  .feature__wrapper {
    .archive__item-title {
      margin-top: 0.25em;
      font-size: 1em;
    }
  }

  .feature__item,
  .feature__item--left,
  .feature__item--center,
  .feature__item--right {
    font-size: 1em;
  }
}

/*
   Wide Pages
   ========================================================================== */

  .wide {
  .archive {
    @include breakpoint($large) {
      padding-right: 0;
    }

    @include breakpoint($x-large) {
      padding-right: 0;
    }
  }
}

/* Place inside a single layout */

.layout--single {
	.feature__wrapper {
		display: inline-block;
	}
}



// index html changes here

  .archive__item-body_2{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .archive__item-body_2_h1 {
    /* width: 430px; */
    font-size: 44px;
    text-align: left;
    margin-top: 56px;
    line-height: 56px;
  }
  .archive__item-body_2_p {
    width: 200px;
    border-radius: 5px;
    background-color: #33383b;
    color: #f2f3f3;
    margin-top: 34px;
    font-size: 18px;
    padding:6px 14px 8px 14px;
    text-align: center;
  
  }
  .archive__item-body_2_img {
    width: 520px;
  }
  .archive__item-body_3_h1 {
    margin: 60px 0px 54px 0px;
    font-size: 36px;
  }
  .archive__item-body_3_div {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    text-align: center;
  
  }
  .archive__item-body_4_div {
    justify-content: center;
    width: 300px;
  }
  .archive__item-body_5_div {
    width: 100px;
    height: 100px;
    margin-right: auto;
    margin-left: auto;
  }
  .archive__item-body_5_img {
    width: 100%;
    height: 90px;
  }
  .archive__item-body_5_p {
    font-size: 20px;
  }
  .archive__item-body_4_p {
    width: 140px;
    border-radius: 5px;
    padding: 6px 14px 8px 14px;
    text-align: center;
    background-color: #33383b;
    color: #f2f3f3;
    margin-top: 30px;
    margin-right: auto;
    margin-left: auto;
    font-size: 8px;
    }
  
    .archive__item-body_6_div {
      justify-content: center;
      width: 300px;
    }
    .archive__item-body_6_Subdiv {
      width: 100px;
      height: 100px;
      margin-right: auto;
      margin-left: auto;
    }
    .archive__item-body_6_Subdiv img {
      width: 95px;
      height: 92px;
    }  
    .archive__item-body_6_Subdiv_p {
      font-size: 20px;
  
    }
    .archive__item-body_7_div {
      justify-content: center;
      width: 300px;
  
    }
    .archive__item-body_7_Subdiv {
      width: 100px;
      height: 100px;
      border-radius: 80px;
      margin-right: auto;
      margin-left: auto;
  
    }
    .archive__item-body_7_Subdiv img {
      width: 100px;
      height: 90px;
  
    }
    .archive__item-body_7_div_p {
      font-size: 20px;
  
    }
  .archive__item-body_8_h1 {
    margin: 50px 0px 32px 0px;
    font-size: 36px;
  }
  .archive__item-body_8_div {
    display: flex;
    flex-direction: row;
    text-align: center;
    padding: 12px 0px;
    justify-content: space-between;
  }
  .archive__item-body_8_div_img {
    max-width: 430px;
    height: 310px;
  }
  .archive__item-body_8_div_p {
  text-align: left;
  font-size: 20px;
  
  }
  .archive__item-body_9_P {
  width: 130px;
  border-radius: 5px;
  padding: 6px 14px 8px 14px;
  text-align: center;
  background-color: #33383b;
  color: #f2f3f3;
  margin-top: 24px;
  font-size: 18px;
  }
  .archive__item-body_10_h1 {
    margin: 50px 0px 32px 0px;
    font-size: 36px;
  }
  .archive__item-body_11_div {
    width: 380px;
    border: 1px solid rgba(179, 179, 179,0.6);
    border-radius: 42px;
    padding: 34px;
    margin-bottom: 24px;
    margin-left: auto;
    margin-right: auto;
  
  }
  .archive__item-body_11_p {
    margin: 16px 20px 0 20px;
    text-align: center;
  }
  .mrt{
  margin-left: 38px;
}

  @media only screen and (max-width: 767px) {
    .archive__item-body_2{
      display: flex;
    flex-direction: column;
    justify-content:center;
    }
    .archive__item-body_2_h1 {
    /* width: 430px; */
    font-size: 38px;
    text-align: left;
    margin-top: 56px;
    line-height: 56px;
  }



  .archive__item-body_8_div {
    display: flex;
    flex-direction:column;
    text-align: center;
    padding: 4% 2%;
    justify-content: center;
  }
  .mrt{
    margin-top: 20px;
    margin-left: 0;
  }

  .archive__item-body_8_div_img {
    max-width: 100%;
    height: 300px;
  }
}

@media only screen and (max-width: 625px) {
  .archive__item-body_11_div {
    width: 100%;
    
    border: 1px solid rgba(179, 179, 179,0.6);
    border-radius: 42px;
    box-shadow: 1px 1px 1px 1px rgb(209, 199, 199);
    padding: 34px;
    margin-bottom: 24px;
  
  }
    }
  

